testing retwis with pined processes